{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 36,
  "lineage": "9dabc4c5-fb9c-5366-e032-031736b8b080",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00c08fcaeeb2de00b",
            "arn": "arn:aws:ec2:me-central-1:443915509636:instance/i-0c05447abd7ddb51d",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c05447abd7ddb51d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04353b07048a83fdb"
              }
            ],
            "primary_network_interface_id": "eni-04353b07048a83fdb",
            "private_dns": "ip-10-0-1-23.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.23",
            "public_dns": "ec2-3-29-139-95.me-central-1.compute.amazonaws.com",
            "public_ip": "3.29.139.95",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ccd7d6d111a0c9c3",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04557c38af7bbca43",
            "tags": {
              "Name": "dev-backend-1"
            },
            "tags_all": {
              "Name": "dev-backend-1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d9d0cace6512b197"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443915509636",
            "id": "i-0c05447abd7ddb51d",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.myapp-sg",
            "data.aws_ami.latest-amazon-linux-image",
            "data.http.my_ip",
            "module.myapp-subnet.aws_subnet.myapp-subnet-1",
            "module.myapp-subnet.aws_vpc.myapp-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00c08fcaeeb2de00b",
            "arn": "arn:aws:ec2:me-central-1:443915509636:instance/i-015f5ea829fac18ef",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-015f5ea829fac18ef",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04be494e91bb86670"
              }
            ],
            "primary_network_interface_id": "eni-04be494e91bb86670",
            "private_dns": "ip-10-0-1-218.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.218",
            "public_dns": "ec2-3-28-45-202.me-central-1.compute.amazonaws.com",
            "public_ip": "3.28.45.202",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0db3543612003a183",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04557c38af7bbca43",
            "tags": {
              "Name": "dev-backend-2"
            },
            "tags_all": {
              "Name": "dev-backend-2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d9d0cace6512b197"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443915509636",
            "id": "i-015f5ea829fac18ef",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.myapp-sg",
            "data.aws_ami.latest-amazon-linux-image",
            "data.http.my_ip",
            "module.myapp-subnet.aws_subnet.myapp-subnet-1",
            "module.myapp-subnet.aws_vpc.myapp-vpc"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00c08fcaeeb2de00b",
            "arn": "arn:aws:ec2:me-central-1:443915509636:instance/i-0f6dd3be65868e758",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f6dd3be65868e758",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-04c9716d637ed67a4"
              }
            ],
            "primary_network_interface_id": "eni-04c9716d637ed67a4",
            "private_dns": "ip-10-0-1-48.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.48",
            "public_dns": "ec2-3-29-30-142.me-central-1.compute.amazonaws.com",
            "public_ip": "3.29.30.142",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-08fe7a33db8fc715a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04557c38af7bbca43",
            "tags": {
              "Name": "dev-backend-3"
            },
            "tags_all": {
              "Name": "dev-backend-3"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d9d0cace6512b197"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443915509636",
            "id": "i-0f6dd3be65868e758",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.myapp-sg",
            "data.aws_ami.latest-amazon-linux-image",
            "data.http.my_ip",
            "module.myapp-subnet.aws_subnet.myapp-subnet-1",
            "module.myapp-subnet.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-00c08fcaeeb2de00b",
            "arn": "arn:aws:ec2:me-central-1:443915509636:instance/i-052a1c560ede05931",
            "associate_public_ip_address": true,
            "availability_zone": "me-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-052a1c560ede05931",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "server-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0439635c4bd9231da"
              }
            ],
            "primary_network_interface_id": "eni-0439635c4bd9231da",
            "private_dns": "ip-10-0-1-41.me-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.41",
            "public_dns": "ec2-51-112-180-161.me-central-1.compute.amazonaws.com",
            "public_ip": "51.112.180.161",
            "region": "me-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-07b528fb9d8dadf8a",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04557c38af7bbca43",
            "tags": {
              "Name": "dev-frontend"
            },
            "tags_all": {
              "Name": "dev-frontend"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d9d0cace6512b197"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443915509636",
            "id": "i-052a1c560ede05931",
            "region": "me-central-1"
          },
          "dependencies": [
            "aws_key_pair.ssh-key",
            "aws_security_group.myapp-sg",
            "data.aws_ami.latest-amazon-linux-image",
            "data.http.my_ip",
            "module.myapp-subnet.aws_subnet.myapp-subnet-1",
            "module.myapp-subnet.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "myapp-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:443915509636:security-group/sg-0d9d0cace6512b197",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9d0cace6512b197",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "20.192.21.49/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "myapp-sg",
            "name_prefix": "",
            "owner_id": "443915509636",
            "region": "me-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-sg"
            },
            "tags_all": {
              "Name": "dev-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b134a832fba08cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443915509636",
            "id": "sg-0d9d0cace6512b197",
            "region": "me-central-1"
          },
          "dependencies": [
            "data.http.my_ip",
            "module.myapp-subnet.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "myapp-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:443915509636:internet-gateway/igw-0ad881d3b8e65173a",
            "id": "igw-0ad881d3b8e65173a",
            "owner_id": "443915509636",
            "region": "me-central-1",
            "tags": {
              "Name": "dev-igw"
            },
            "tags_all": {
              "Name": "dev-igw"
            },
            "vpc_id": "vpc-08b134a832fba08cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.myapp-subnet.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "myapp-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:443915509636:route-table/rtb-092bca99cf5b5ef45",
            "id": "rtb-092bca99cf5b5ef45",
            "owner_id": "443915509636",
            "propagating_vgws": [],
            "region": "me-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0ad881d3b8e65173a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-rtb"
            },
            "tags_all": {
              "Name": "dev-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-08b134a832fba08cc"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443915509636",
            "id": "rtb-092bca99cf5b5ef45",
            "region": "me-central-1"
          },
          "dependencies": [
            "module.myapp-subnet.aws_internet_gateway.myapp-igw",
            "module.myapp-subnet.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a-rtb-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-037c88cb41fb75436",
            "region": "me-central-1",
            "route_table_id": "rtb-092bca99cf5b5ef45",
            "subnet_id": "subnet-04557c38af7bbca43"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.myapp-subnet.aws_internet_gateway.myapp-igw",
            "module.myapp-subnet.aws_route_table.myapp-route-table",
            "module.myapp-subnet.aws_subnet.myapp-subnet-1",
            "module.myapp-subnet.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "myapp-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:443915509636:subnet/subnet-04557c38af7bbca43",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "me-central-1a",
            "availability_zone_id": "mec1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04557c38af7bbca43",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "443915509636",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "me-central-1",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "tags_all": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-08b134a832fba08cc"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443915509636",
            "id": "subnet-04557c38af7bbca43",
            "region": "me-central-1"
          },
          "dependencies": [
            "module.myapp-subnet.aws_vpc.myapp-vpc"
          ]
        }
      ]
    },
    {
      "module": "module.myapp-subnet",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "myapp-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:me-central-1:443915509636:vpc/vpc-08b134a832fba08cc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0045faca13f9406eb",
            "default_route_table_id": "rtb-0d76e7160c012e3eb",
            "default_security_group_id": "sg-0d2d209564aec4e9f",
            "dhcp_options_id": "dopt-0426dabcc5c93c0f9",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08b134a832fba08cc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0d76e7160c012e3eb",
            "owner_id": "443915509636",
            "region": "me-central-1",
            "tags": {
              "Name": "dev-vpc"
            },
            "tags_all": {
              "Name": "dev-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "443915509636",
            "id": "vpc-08b134a832fba08cc",
            "region": "me-central-1"
          }
        }
      ]
    }
  ]
}